[package]
name = "antlr4-rust"
version = "0.4.0"
authors = ["CamileSing <rrevenantt@gmail.com>"]
homepage = "https://github.com/camilesing/antlr4-rust"
repository = "https://github.com/camilesing/antlr4-rust"
documentation = "https://docs.rs/antlr4-rust"
description = "ANTLR4 runtime for Rust"
readme = "README.md"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["ANTLR","ANTLR4","parsing","runtime"]
categories = ["parsing"]
exclude = ["/build.rs","/grammars","/templates"]


[dependencies]
lazy_static = "^1.5"
uuid = "=1.17.*"
byteorder = "^1.5"
murmur3 = "=0.4.1" # 0.5 is incompatible currently
bit-set = "=0.8.*"
once_cell = "^1.21"
typed-arena = "^2.0"
better_any = "0.2.0"
parking_lot = "0.12.*"